Fix id of argument

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -31,7 +31,7 @@
     <h1 style="text-align: center;">MATIC MANIAC</h1>
     <p style="text-align: center;">Matic Maniac is a place to rate your wallet and receive a score based on your activity within the Polygon Network. Wallets with higher scores are more active and have done a larger variety of things than wallets with lower scores. Enter your wallet below and see where you stand, there are even achievements you can earn by participanting in various ways across the MATIC/Polygon Network.<br /><br />Please enter your Wallet Address.</p>
     <form style="text-align: center;" action="/matic" method="get">
-      <input style="width: 500px; height: 20px; background-color: lightgrey" type="text" id="address" name="address">
+      <input style="width: 500px; height: 20px; background-color: lightgrey" type="text" id="wallet" name="wallet">
       <br><button type="submit">Rate your Wallet!</button>
     </form>
 </body>
