--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Matic Maniac</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="/static/style.css" media=”screen” />
 </head>
 <style>
     body {
-        background-image: url('dashboard.png');
+        background-image: url('/static/dashboard.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
@@ -22,7 +22,7 @@
         margin-right: auto;
 }
 </style>
-<body style="background-image: url('dashboard.png');
+<body style="background-image: url('/static/dashboard.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
