--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
             font-size: 20px; ">
     <h1 style="text-align: center;">MATIC MANIAC</h1>
     <p style="text-align: center;">Matic Maniac is a place to rate your wallet and recieve a score based on your activity within the Polygon Network. Wallets with higher scores are more active and have done a larger variety of things than wallets with lower scores. Enter your wallet below and see where you stand, there are even achievements you can earn by participanting in various ways across the MATIC/Polygon Network.<br /><br /></p>
-    <p style="text-align: center;">The total Maniac Score for this wallet is {{.TotalScore}}</p>
+    <p style="text-align: center;font-weight: bold;">The total Maniac Score for this wallet is {{.TotalScore}}</p>
     <table style="height: 36px; width: 343px;" border="1", class="center">
     <tbody>
-    <tr style="height: 18px;">
+    <tr style="height: 18px;font-weight: bold;">
         <td style="height: 18px; width: 176.767px;">Achievement Name</td>
         <td style="height: 18px; width: 71.7667px; text-align: center;">Point Value</td>
         <td style="height: 18px; width: 72.4667px; text-align: center;">Earned</td>
