Only show achievements earned

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,51 +33,59 @@
     <p style="text-align: center;font-weight: bold;">The total Maniac Score for this wallet is {{.TotalScore}}</p>
     <table style="height: 36px; width: 343px;" border="1", class="center">
     <tbody>
+        
     <tr style="height: 18px;font-weight: bold;">
         <td style="height: 18px; width: 176.767px;">Achievement Name</td>
         <td style="height: 18px; width: 71.7667px; text-align: center;">Point Value</td>
-        <td style="height: 18px; width: 72.4667px; text-align: center;">Earned</td>
     </tr>
+    {{ if .FreshStart }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Fresh Start!</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">55</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.FreshStart}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .NFTHolder }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">NFT Holder</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">10</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.NFTHolder}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .NFTCollector }} 
     <tr style="height: 18px;">
-        <td style="height: 18px; width: 176.767px;">NFT Holder</td>
+        <td style="height: 18px; width: 176.767px;">NFT Collector</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">25</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.NFTCollector}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .Reciever }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Reciever</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">25</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.Reciever}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .Giver }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Giver</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">25</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.Giver}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .Zen }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Zen</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">100</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.Zen}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .Token_connoisseur }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Token Connoisseur</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">100</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.Token_connoisseur}}</div></td>
     </tr>
+    {{ else }} {{ end }}
+    {{ if .Toptenk }} 
     <tr style="height: 18px;">
         <td style="height: 18px; width: 176.767px;">Top 10,000 MATIC Holder</td>
         <td style="text-align: center; height: 18px; width: 71.7667px;">100</td>
-        <td style="height: 18px; width: 72.4667px;"><div>{{.Toptenk}}</div></td>
     </tr>
+    {{ else }} {{ end }}
     </tbody>
     </table>
 </body>
